unpackaged/main/default/objects/NF_Per_Brand_Bot_Announcement__mdt/NF_Per_Brand_Bot_Announcement__mdt.object-meta.xml
<CustomObject>
    <label>NF Per-Brand Bot Announcement</label>
    <pluralLabel>NF Per-Brand Bot Announcements</pluralLabel>
</CustomObject>