unpackaged/main/default/objects/NF_Per_Brand_Bot_Announcement__mdt/fields/Announcement__c.field-meta.xml
<CustomField>
    <fullName>Announcement__c</fullName>
    <description>The announcement for the bot to display</description>
    <label>Announcement</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>