unpackaged/main/default/objects/NF_Per_Brand_Bot_Announcement__mdt/fields/Announcement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Announcement_End_Date__c</fullName>
    <label>Announcement End Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>