unpackaged/main/default/objects/NF_Per_Brand_Bot_Announcement__mdt/fields/Announcement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Announcement_Start_Date__c</fullName>
    <label>Announcement Start Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>