unpackaged/main/default/objects/NF_Per_Brand_Bot_Announcement__mdt/fields/Brand_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_API_Name__c</fullName>
    <description>Which brand&#39;s bot to display the announcement on</description>
    <inlineHelpText>Which brand&#39;s bot to display the announcement on - values calculated in the Einstein bot</inlineHelpText>
    <label>Brand API Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Tommy Hilfiger</fullName>
            </value>
            <value>
                <fullName>Calvin Klein</fullName>
            </value>
            <value>
                <fullName>IZOD</fullName>
            </value>
            <value>
                <fullName>Van Heusen</fullName>
            </value>
            <value>
                <fullName>DEFAULT</fullName>
                <default>true</default>
                <label>DEFAULT</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>