unpackaged/main/default/objects/NF_Per_Brand_Bot_Announcement__mdt/validationRules/End_Date_Must_Be_On_Or_After_Start_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>End_Date_Must_Be_On_Or_After_Start_Date</fullName>
    <active>true</active>
    <errorConditionFormula>Announcement_End_Date__c &lt; Announcement_Start_Date__c</errorConditionFormula>
    <errorMessage>Announcement end date must be ON or AFTER announcement start date</errorMessage>
</ValidationRule>